<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:onClick="startIntentService"
        android:text="@string/intent_service_button_start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:onClick="startService"
        android:text="@string/service_button_start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginStart="@dimen/common_margin"
        android:onClick="startBoundService"
        android:text="@string/bound_service_button_start" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginStart="@dimen/common_margin"
        android:onClick="getTimeBoundService"
        android:text="@string/get_result_bound_service_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginStart="@dimen/common_margin"
        android:onClick="unbindBoundService"
        android:text="@string/bound_service_button_unbind" />

</LinearLayout>